@@ -2,19 +2,19 @@
 <CodeBlocks_layout_file>
 	<ActiveTarget name="Release" />
 	<File name="../../ChangeLog" open="1" top="0" tabpos="1">
-		<Cursor position="0" topLine="0" />
+		<Cursor position="509" topLine="0" />
 	</File>
 	<File name="../../EXAMPLES" open="1" top="0" tabpos="2">
-		<Cursor position="0" topLine="0" />
+		<Cursor position="1270" topLine="0" />
 	</File>
 	<File name="../../HOWTO.conf" open="1" top="0" tabpos="3">
 		<Cursor position="0" topLine="0" />
 	</File>
 	<File name="../../INSTALL" open="1" top="0" tabpos="4">
-		<Cursor position="0" topLine="0" />
+		<Cursor position="10306" topLine="200" />
 	</File>
 	<File name="../../Makefile.am" open="1" top="0" tabpos="5">
-		<Cursor position="0" topLine="0" />
+		<Cursor position="3479" topLine="72" />
 	</File>
 	<File name="../../README" open="1" top="0" tabpos="6">
 		<Cursor position="0" topLine="0" />
@@ -22,8 +22,8 @@
 	<File name="../../autogen" open="1" top="0" tabpos="7">
 		<Cursor position="0" topLine="0" />
 	</File>
-	<File name="../../configure.ac" open="1" top="1" tabpos="8">
-		<Cursor position="0" topLine="12" />
+	<File name="../../configure.ac" open="1" top="0" tabpos="8">
+		<Cursor position="8054" topLine="225" />
 	</File>
 	<File name="../../dvda-author.dap" open="1" top="0" tabpos="9">
 		<Cursor position="0" topLine="0" />
@@ -32,10 +32,10 @@
 		<Cursor position="0" topLine="0" />
 	</File>
 	<File name="../../dvda-author2.dap" open="1" top="0" tabpos="11">
-		<Cursor position="0" topLine="0" />
+		<Cursor position="1108" topLine="12" />
 	</File>
 	<File name="../../dvda-author3.dap" open="1" top="0" tabpos="12">
-		<Cursor position="592" topLine="42" />
+		<Cursor position="1342" topLine="33" />
 	</File>
 	<File name="../../libats2wav/src/Makefile.am" open="1" top="0" tabpos="13">
 		<Cursor position="0" topLine="0" />
@@ -107,19 +107,25 @@
 		<Cursor position="0" topLine="0" />
 	</File>
 	<File name="../../m4/dependencies.m4" open="1" top="0" tabpos="36">
-		<Cursor position="0" topLine="0" />
+		<Cursor position="1980" topLine="13" />
 	</File>
 	<File name="../../m4/dvda.m4" open="1" top="0" tabpos="37">
-		<Cursor position="0" topLine="0" />
+		<Cursor position="23955" topLine="561" />
 	</File>
 	<File name="../../script.in" open="1" top="0" tabpos="38">
-		<Cursor position="0" topLine="0" />
+		<Cursor position="133" topLine="0" />
+	</File>
+	<File name="../../script1.in" open="1" top="0" tabpos="76">
+		<Cursor position="144" topLine="0" />
+	</File>
+	<File name="../../script2.in" open="1" top="0" tabpos="77">
+		<Cursor position="83" topLine="0" />
 	</File>
 	<File name="../../src/Makefile.am" open="1" top="0" tabpos="39">
 		<Cursor position="0" topLine="0" />
 	</File>
 	<File name="../../src/amg2.c" open="1" top="0" tabpos="40">
-		<Cursor position="5820" topLine="154" />
+		<Cursor position="8431" topLine="221" />
 	</File>
 	<File name="../../src/asvs.c" open="1" top="0" tabpos="41">
 		<Cursor position="0" topLine="0" />
@@ -134,19 +140,19 @@
 		<Cursor position="0" topLine="0" />
 	</File>
 	<File name="../../src/auxiliary.c" open="1" top="0" tabpos="45">
-		<Cursor position="11043" topLine="150" />
+		<Cursor position="3425" topLine="78" />
 	</File>
 	<File name="../../src/command_line_parsing.c" open="1" top="0" tabpos="46">
-		<Cursor position="59025" topLine="1658" />
+		<Cursor position="60522" topLine="1732" />
 	</File>
 	<File name="../../src/dvda-author2.c" open="1" top="0" tabpos="47">
-		<Cursor position="5791" topLine="164" />
+		<Cursor position="4876" topLine="30" />
 	</File>
 	<File name="../../src/file_input_parsing.c" open="1" top="0" tabpos="48">
 		<Cursor position="0" topLine="0" />
 	</File>
 	<File name="../../src/include/amg.h" open="1" top="0" tabpos="49">
-		<Cursor position="0" topLine="0" />
+		<Cursor position="1417" topLine="0" />
 	</File>
 	<File name="../../src/include/asvs.h" open="1" top="0" tabpos="50">
 		<Cursor position="0" topLine="0" />
@@ -160,14 +166,14 @@
 	<File name="../../src/include/audio2.h" open="1" top="0" tabpos="53">
 		<Cursor position="0" topLine="0" />
 	</File>
-	<File name="../../src/include/auxiliary.h" open="1" top="0" tabpos="54">
-		<Cursor position="0" topLine="0" />
+	<File name="../../src/include/auxiliary.h" open="1" top="1" tabpos="54">
+		<Cursor position="1419" topLine="25" />
 	</File>
 	<File name="../../src/include/command_line_parsing.h" open="1" top="0" tabpos="55">
 		<Cursor position="0" topLine="0" />
 	</File>
 	<File name="../../src/include/commonvars.h" open="1" top="0" tabpos="56">
-		<Cursor position="8468" topLine="287" />
+		<Cursor position="0" topLine="61" />
 	</File>
 	<File name="../../src/include/dvda-author.h" open="1" top="0" tabpos="57">
 		<Cursor position="0" topLine="0" />
@@ -197,7 +203,7 @@
 		<Cursor position="0" topLine="0" />
 	</File>
 	<File name="../../src/include/structures.h" open="1" top="0" tabpos="66">
-		<Cursor position="2532" topLine="94" />
+		<Cursor position="0" topLine="0" />
 	</File>
 	<File name="../../src/include/videoimport.h" open="1" top="0" tabpos="67">
 		<Cursor position="0" topLine="0" />
@@ -206,7 +212,7 @@
 		<Cursor position="0" topLine="0" />
 	</File>
 	<File name="../../src/launch_manager.c" open="1" top="0" tabpos="69">
-		<Cursor position="6808" topLine="232" />
+		<Cursor position="20708" topLine="643" />
 	</File>
 	<File name="../../src/lexer.c" open="1" top="0" tabpos="70">
 		<Cursor position="0" topLine="0" />
@@ -215,15 +221,15 @@
 		<Cursor position="0" topLine="0" />
 	</File>
 	<File name="../../src/menu.c" open="1" top="0" tabpos="72">
-		<Cursor position="15454" topLine="495" />
+		<Cursor position="16233" topLine="524" />
 	</File>
 	<File name="../../src/samg2.c" open="1" top="0" tabpos="73">
-		<Cursor position="0" topLine="0" />
+		<Cursor position="6881" topLine="225" />
 	</File>
 	<File name="../../src/videoimport.c" open="1" top="0" tabpos="74">
 		<Cursor position="0" topLine="0" />
 	</File>
 	<File name="../../src/xml.c" open="1" top="0" tabpos="75">
-		<Cursor position="0" topLine="0" />
+		<Cursor position="0" topLine="228" />
 	</File>
 </CodeBlocks_layout_file>
